kubernetes/longhorn/deprecated/longhorn-ingress-tailscale.yaml
# WARNING: deprecated in favor of longhorn-ingressroute-tailscale.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn-ingress-tailscale
  namespace: longhorn-system
spec:
  ingressClassName: tailscale
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: longhorn-frontend
                port:
                  number: 80
